use folder-like cannonical URLs for registration

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -15,5 +15,5 @@
 <li>{% trans interval=interval|int %}You will be disconnected after {{ interval }}mn of inactivity: use this address to reconnect.{% endtrans %}</li>
 </ul>
 
-<p><a class="pure-button pure-button-primary" href="/register">{% trans %}Got it!{% endtrans %}</a></p>
+<p><a class="pure-button pure-button-primary" href="/register/">{% trans %}Got it!{% endtrans %}</a></p>
 {% endblock %}
