--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -12,7 +12,7 @@
     <body class="pure-g">
         <header>
           <a href="/">
-            <img class="" src="/branding/horizontal-logo-light.png"></img>
+            <img style="width: 55em; height: 5em; object-fit: scale-down; object-position: center left;" src="/branding/horizontal-logo-light.png"></img>
           </a>
         </header>
         <div class="content pure-u-1 pure-u-md-3-4">
