--- a/portal/templates/base.html
+++ b/portal/templates/base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>{{ hotspot_name }}</title>
-        <link rel="icon" href="/assets/favicon.png">
+        <link rel="icon" href="/branding/square-logo-light.png">
         <link rel="stylesheet" type="text/css" href="/assets/pure-min.css" />
         <link rel="stylesheet" type="text/css" href="/assets/portal.css" />
         <script src="/assets/clipboard.min.js"></script>
